@@ -1,3 +1,8 @@
+2011-12-27  Christopher Roy Bratusek <nano@tuxfamily.org>
+	* lisp/sawfish/wm/integration/mate.jl: add integration-module for MATE
+
+	* lisp/sawfish/wm/user.jl: same
+
 2011-10-04  Christopher Roy Bratusek <nano@tuxfamily.org>
 	* lisp/sawfish/wm/ext/shade-stack.jl: added shade-stack feature.
 	Original code by: Luke Gorrie. Changes compared to original:
